# stm32_multi-channel_temp_controller

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Inc/: auto_tune.h  data_structures.h  http_server.h  modbus_server.h  output_driver.h  pid_controller.h  safety_monitor.h  sensor_driver.h  spi_driver.h  stm32f4xx_hal_conf.h  system_config.h
Src/: auto_tune.c  http_server.c  main.c  modbus_server.c  output_driver.c  pid_controller.c  safety_monitor.c  sensor_driver.c  spi_driver.c  webui_data.c
WebUI/: app.js  index.html  style.css
docs/: user_manual.md
